--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,4 +1,4 @@
-.diceFirstPosition {
+#diceFirstPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -6,7 +6,7 @@
     top: 534px;
 }
 
-.diceSecondPosition {
+#diceSecondPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -14,7 +14,7 @@
     top: 534px;
 }
 
-.diceThirdPosition {
+#diceThirdPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -22,7 +22,7 @@
     top: 351px;
 }
 
-.diceFourthPosition {
+#diceFourthPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -30,7 +30,7 @@
     top: 347px;
 }
 
-.diceFifthPosition {
+#diceFifthPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -38,7 +38,7 @@
     top: 169px;
 }
 
-.diceSixthPosition {
+#diceSixthPosition {
     position: absolute;
     width: 176px;
     height: 172px;
@@ -86,7 +86,7 @@
     font-size: 30px;
 }
 
-.buttonLefthPosition {
+#buttonLefthPosition {
     position: absolute;
     width: 390px;
     height: 76px;
@@ -97,7 +97,7 @@
     border-radius: 50px;
 }
 
-.buttonRightPosition {
+#buttonRightPosition {
     position: absolute;
     width: 390px;
     height: 76px;
@@ -208,7 +208,7 @@
     color: #000000;
 }
 
-#rulesPosition {
+.rulesPosition {
     position: absolute;
     width: 143px;
     height: 54px;
@@ -218,21 +218,4 @@
     color: red;
 }
 
-
-/*
-.tag_score {
-    position: absolute;
-    width: 300px;
-    height: 314px;
-    left: 1212px;
-    top: 167px;
-}
-
-.tag_player {
-    position: absolute;
-    width: 300px;
-    height: 314px;
-    left: 0px;
-    top: 167px;
-}
-*/
+.dice {}
