--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -126,7 +126,7 @@
 .textScore {
     position: absolute;
     width: 88px;
-    height: 54px;
+    height: 0px;
     left: 1188px;
     top: 347px;
     font-family: "Sevillana";
@@ -135,7 +135,7 @@
     font-size: 40px;
     line-height: 54px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     text-align: center;
     color: #000000;
 }
@@ -143,7 +143,7 @@
 .textPlayer1 {
     position: absolute;
     width: 153px;
-    height: 54px;
+    height: 0px;
     left: 1155px;
     top: 396px;
     font-family: "Sevillana";
@@ -160,7 +160,7 @@
 .textPlayer2 {
     position: absolute;
     width: 153px;
-    height: 54px;
+    height: 124px;
     left: 1155px;
     top: 451px;
     font-family: "Sevillana";
@@ -177,16 +177,16 @@
 .textPlayerRound {
     position: absolute;
     width: 143px;
-    height: 54px;
+    height: 214px;
     left: 223px;
     top: 360px;
     font-family: "Sevillana";
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 40px;
-    line-height: 54px;
+    line-height: 64px;
     display: flex;
-    align-items: center;
+    align-items: end;
     text-align: center;
     color: #000000;
 }
@@ -194,16 +194,16 @@
 .textPlayerRoundResult {
     position: absolute;
     width: 143px;
-    height: 54px;
+    height: 4px;
     left: 223px;
     top: 437px;
     font-family: "Sevillana";
-    font-style: normal;
-    font-weight: 400;
+    font-style: bold;
+    font-weight: bold;
     font-size: 40px;
-    line-height: 54px;
+    line-height: 64px;
     display: flex;
-    align-items: center;
+    align-items: end;
     text-align: center;
     color: #000000;
 }
