sound stop ok 14062022 19:26

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -225,3 +225,12 @@
 #player {}
 
 #playerResult {}
+
+.hidden {
+    display: none;
+    background-color: red;
+}
+
+.show {
+    display: flex;
+}
