--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -108,6 +108,14 @@
     border-radius: 50px;
 }
 
+#buttonRestartPosition {
+    position: absolute;
+    width: 122px;
+    height: 87px;
+    left: 704px;
+    top: 570px;
+}
+
 .tag_header {
     position: absolute;
     width: 1512px;
@@ -233,4 +241,14 @@
 
 .show {
     display: flex;
+}
+
+#newDiv {
+    position: absolute;
+    width: 42px;
+    height: 89px;
+    left: 723px;
+    top: 347px;
+    font-size: 20px;
+    font-weight: bold;
 }
